tests/core/error/function-4.rq
SELECT (tracker:id(false) AS ?i) { }
